NDD-569: Adjusted CSS to align cetner. Fixed breakpoints for better UI display for social and footer links for different formats.

--- a/docroot/profiles/custom/webny/themes/custom/webny_theme/sass/components/_global_nav_footer.scss
+++ b/docroot/profiles/custom/webny/themes/custom/webny_theme/sass/components/_global_nav_footer.scss
@@ -178,10 +178,9 @@ $nav-bottom-text-transform:             $global-footer-top-text-transform ;
 
   .social-media ul li {
     text-transform: uppercase;
-    padding: .25em 1em 1em 0;
+    padding: .25em 0 1em 0;
     text-align: left;
     width: 100%;
-    padding-left: 0;
   }
 
   .social-media h2:before {
@@ -211,7 +210,7 @@ $nav-bottom-text-transform:             $global-footer-top-text-transform ;
 
   .social-media a {
     height: 20px;
-    padding: 10px 0 10px 0;
+    padding: 10px 0;
     position: relative;
     text-decoration: none;
   }
@@ -224,6 +223,7 @@ $nav-bottom-text-transform:             $global-footer-top-text-transform ;
   .social-media {
     a[href*="blogger"]::before{
       background-image: url(../icons/social/black/icon-social-blogger.png);
+      background-clip: content-box;
     }
     a[href*="del.icio.us"]::before {
       background-image: url(../icons/social/black/icon-social-delicious.png);
@@ -285,7 +285,7 @@ $nav-bottom-text-transform:             $global-footer-top-text-transform ;
     .webny-global-footer {
       nav.footer-vertical {
         li {
-          width: 39%;
+          width: 100%;
         }
       }
 
@@ -297,8 +297,11 @@ $nav-bottom-text-transform:             $global-footer-top-text-transform ;
     } // END
 
     .social-media ul li{
+      width: 90%;
+      text-align: left;
     }
     .social-media ul{
+
     }
 
   } // END MIN MOBILE VIEW
@@ -309,13 +312,13 @@ $nav-bottom-text-transform:             $global-footer-top-text-transform ;
     .webny-global-footer {
       nav.footer-vertical {
         li {
-          width: 27%;
+          width: 45%;
         }
       }
 
       nav.footer-horizontal {
         li {
-          width: 45%;
+          width: 40%;
         }
       }
     } // END
@@ -326,12 +329,11 @@ $nav-bottom-text-transform:             $global-footer-top-text-transform ;
     }
 
     .social-media ul li{
-       width: 27%;
+       width: 45%;
+      text-align: left;
     }
 
     .social-media ul{
-      padding-left: 16%;
-      width: 90%;
     }
 
 
@@ -357,11 +359,11 @@ $nav-bottom-text-transform:             $global-footer-top-text-transform ;
 
     .social-media ul li{
         width: 18%;
+        text-align: center;
     }
 
     .social-media ul{
-      padding-left: 8%;
-      width: 80%;
+
     }
 
   } // END MIN PC
